changed scroll bar and links

--- a/src/app/mainsite/portfolio/portfolio.component.html
+++ b/src/app/mainsite/portfolio/portfolio.component.html
@@ -20,7 +20,7 @@
             Task manager inspired by the Kanban System. Create and organize tasks using drag and drop functions, assign users and categories.
           </p>
           <div class="buttons">
-            <button class="live-btn">Live test</button>
+            <a href="https://join.miriam-fuchs.net/" target="_blank"><button class="live-btn">Live test</button></a>
             <a href="https://github.com/FuchsMiriam/join-dummy" target="_blank"><button class="github-btn">Github</button></a>
           </div>
         </div>
@@ -34,7 +34,7 @@
             A Jump ’n’ Run game based on an object-oriented approach. Help Pepe to find coins and salsa bottle to fight against the chickens.
           </p>
           <div class="buttons">
-            <button class="live-btn">Live test</button>
+            <a href="https://polloloco.miriam-fuchs.net/" target="_blank"><button class="live-btn">Live test</button></a>
             <a href="https://github.com/FuchsMiriam/polloloco" target="_blank"><button class="github-btn">Github</button></a>
           </div>
         </div>
@@ -42,7 +42,7 @@
       </div>
 
     <div class="project-card">
-        <img src="./assets/img/simple-crm.jpg" alt="Project Image" class="project-img" />
+        <img src="./assets/img/crm.png" alt="Project Image" class="project-img" />
         <div class="project-info">
           <h2 class="project-title">Simple CRM</h2>
           <p class="project-tech">Angular | Firebase</p>
@@ -64,7 +64,7 @@
             Based on the PokéAPI, a simple library that provides and catalogs Pokémon information.
           </p>
           <div class="buttons">
-            <button class="live-btn">Live test</button>
+            <a href="https://pokedex.miriam-fuchs.net/" target="_blank"><button class="live-btn">Live test</button></a>
             <a href="https://github.com/FuchsMiriam/pokedex" target="_blank"><button class="github-btn">Github</button></a>
           </div>
         </div>
