--- a/src/app/mainsite/portfolio/portfolio.component.html
+++ b/src/app/mainsite/portfolio/portfolio.component.html
@@ -17,7 +17,7 @@
           <h2 class="project-title">Join</h2>
           <p class="project-tech">Angular | TypeScript | HTML | CSS | Firebase</p>
           <p class="project-description">
-            Task manager inspired by the Kanban System. Create and organize tasks using drag and drop functions, assign users and categories.
+            {{ "PORTFOLIO.JOIN" | translate }}
           </p>
           <div class="buttons">
             <a href="https://join.miriam-fuchs.net/" target="_blank"><button class="live-btn">Live test</button></a>
@@ -31,7 +31,7 @@
           <h2 class="project-title">El Pollo Loco</h2>
           <p class="project-tech">JavaScript | HTML | CSS</p>
           <p class="project-description">
-            A Jump ’n’ Run game based on an object-oriented approach. Help Pepe to find coins and salsa bottle to fight against the chickens.
+            {{ "PORTFOLIO.POLLO" | translate }}
           </p>
           <div class="buttons">
             <a href="https://polloloco.miriam-fuchs.net/" target="_blank"><button class="live-btn">Live test</button></a>
@@ -47,7 +47,7 @@
           <h2 class="project-title">Simple CRM</h2>
           <p class="project-tech">Angular | Firebase</p>
           <p class="project-description">
-            A very Simple Customer Relationship Management system working with CRUD functionality.
+            {{ "PORTFOLIO.CRM" | translate }}
           </p>
           <div class="buttons">
             <button class="live-btn">Live test</button>
@@ -61,7 +61,7 @@
           <h2 class="project-title">Pokédex</h2>
           <p class="project-tech">JavaScript | HTML | CSS | API</p>
           <p class="project-description">
-            Based on the PokéAPI, a simple library that provides and catalogs Pokémon information.
+            {{ "PORTFOLIO.POKEMON" | translate }}
           </p>
           <div class="buttons">
             <a href="https://pokedex.miriam-fuchs.net/" target="_blank"><button class="live-btn">Live test</button></a>
