minor fixes layout

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -13,7 +13,6 @@
 .footer-content {
   width: 100%;
   display: flex;
-
 }
 
 .line {
@@ -31,7 +30,9 @@ footer {
   align-items: center;
 }
 
-.name-left, .name-middle, .logo-right {
+.name-left,
+.name-middle,
+.logo-right {
   display: flex;
   align-items: center;
 }
@@ -76,6 +77,9 @@ footer {
   align-items: center;
 
   a {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
     img {
       width: 30px;
       height: 30px;
@@ -84,6 +88,7 @@ footer {
       &:hover {
         width: 40px;
         height: 40px;
+        transform: scale(1.1);
       }
     }
   }
@@ -107,21 +112,21 @@ footer {
 }
 
 @media (max-width: 1125px) {
-  .name-middle{
-      >p {
-          font-size: 18px;
-          flex-wrap: nowrap
-      }
+  .name-middle {
+    > p {
+      font-size: 18px;
+      flex-wrap: nowrap;
+    }
   }
 }
 @media (max-width: 825px) {
   .footer {
-      flex-direction: column;
-      height: auto;
-      padding: 10px;
+    flex-direction: column;
+    height: auto;
+    padding: 10px;
   }
 
-  .footer-section{
+  .footer-section {
     padding: 0;
   }
 }
