--- a/src/app/mainsite/aboutme/aboutme.component.scss
+++ b/src/app/mainsite/aboutme/aboutme.component.scss
@@ -1,3 +1,4 @@
+/* Layout and alignment for the "About Me" section and its content */
 .about-me-container {
   display: flex;
   justify-content: center;
@@ -38,7 +39,6 @@
     display: flex;
     align-items: flex-start;
     gap: 35px;
-    overflow: hidden;
 
     > img {
       width: 50px;
@@ -54,11 +54,11 @@
   min-height: 30px;
 
   &:hover {
-    min-width: 40px;
-    min-height: 40px;
+    transform: scale(1.2);
   }
 }
 
+/* Styling for text and typography */
 h1 {
   font-size: 88px;
   font-weight: 700;
@@ -71,8 +71,10 @@ p {
   text-align: left;
   margin-bottom: 24px;
   font-weight: 400;
+  margin-top: 0;
 }
 
+/* Image section design and elements */
 .image-section {
   display: flex;
   position: relative;
