--- a/src/app/mainsite/above-the-fold/above-the-fold.component.scss
+++ b/src/app/mainsite/above-the-fold/above-the-fold.component.scss
@@ -1,3 +1,4 @@
+/* Layout and structure for the hero section */
 .hero-section {
   position: relative;
   width: 100%;
@@ -18,6 +19,15 @@
   justify-content: space-between;
   position: relative;
   padding-bottom: 100px;
+}
+
+.hero-bg {
+  position: absolute;
+  top: 40px;
+  z-index: 1;
+  width: 1440px;
+  height: 1080px;
+  object-fit: cover;
 }
 
 .image-wrapper {
@@ -61,6 +71,7 @@
   }
 }
 
+/* Text and typography in the hero section */
 .name-title {
   display: flex;
   align-items: center;
@@ -86,6 +97,7 @@
   }
 }
 
+/* Buttons and interactive elements */
 .contact-button {
   background-color: #70e61c;
   color: white;
@@ -126,6 +138,7 @@
   z-index: 2;
 }
 
+/* Social and scroll indicators */
 .social-bar-line {
   border: 2px solid #9747ff;
   width: 100px;
@@ -154,6 +167,9 @@
   height: 50px;
 
   > a {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
     > img {
       cursor: pointer;
       &:hover {
@@ -183,15 +199,6 @@
   width: 32px;
   height: 32px;
   transform: rotate(90deg) scale(1.2);
-}
-
-.hero-bg {
-  position: absolute;
-  top: 40px;
-  z-index: 1;
-  width: 1440px;
-  height: 1080px;
-  object-fit: cover;
 }
 
 @media (max-width: 1400px) {
