minor fixes TypeScript

--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -8,7 +8,7 @@
   
     <h2>Kontakt</h2>
     <p>Telefon: +49 (0) 16095801131<br />
-      E-Mail: fuchsmiriam&#64;yahoo.de
+      E-Mail: info&#64;miriam-fuchs.net
     </p>
   
     <p>Quelle: <a href="https://www.e-recht24.de/impressum-generator.html" target="_blank">https://www.e-recht24.de/impressum-generator.html</a></p>
