--- a/src/app/mainsite/contact/contact.component.html
+++ b/src/app/mainsite/contact/contact.component.html
@@ -115,7 +115,7 @@
       </form>
 
       <div id="confirmation-message" *ngIf="emailSent">
-        <p>Your email has been sent successfully!</p>
+        <p>Email has been sent!/Mail verschickt!</p>
       </div>
 
       <img
