--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
+<div class="page-container">
 <app-header class="center"></app-header>
 
 
 <router-outlet></router-outlet>
 <app-footer class="center"></app-footer>
+</div>
