--- a/src/app/imprint/imprint.component.scss
+++ b/src/app/imprint/imprint.component.scss
@@ -1,41 +1,44 @@
 /* Basic styling for the imprint */
 h1 {
-    font-size: 36px;
-    color: white;
-    margin-bottom: 20px;
-  }
-  
-  h2 {
-    font-size: 28px;
-    color: #70e61c;
-    margin-top: 40px;
-    margin-bottom: 10px;
-  }
-  
-  p {
-    font-size: 18px;
-    color: white;
-    line-height: 1.5;
-    margin-bottom: 15px;
-  }
-  
-  /* Link styling */
-  a {
-    color: #70e61c;
-    text-decoration: none;
-    font-weight: normal;
-    
-    &:hover {
-      font-weight: bold;
-    }
-  }
+  font-size: 36px;
+  color: white;
+  margin-bottom: 20px;
+}
 
-  /* Container for the imprint */
-  .impressum-container {
-    background: #141d2f;
-    padding: 40px;
-    border-radius: 8px;
-    max-width: 800px;
-    margin: 50px auto;
+h2 {
+  font-size: 28px;
+  color: #70e61c;
+  margin-top: 40px;
+  margin-bottom: 10px;
+}
+
+p {
+  font-size: 18px;
+  color: white;
+  line-height: 1.5;
+  margin-bottom: 15px;
+}
+
+/* Link styling */
+a {
+  color: #70e61c;
+  text-decoration: none;
+  font-weight: normal;
+
+  &:hover {
+    font-weight: bold;
   }
-  
+}
+
+/* Container for the imprint */
+.impressum-container {
+  background: #141d2f;
+  padding: 40px;
+  border-radius: 8px;
+  margin: 50px auto;
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
