--- a/src/app/mainsite/aboutme/aboutme.component.scss
+++ b/src/app/mainsite/aboutme/aboutme.component.scss
@@ -16,6 +16,7 @@
   justify-content: center;
   align-items: center;
   position: relative;
+  margin-bottom: 100px;
 }
 
 .about-me-content {
@@ -50,8 +51,8 @@
 
 .bulb-img,
 .puzzle-img {
-  min-width: 30px;
-  min-height: 30px;
+  min-width: 50px;
+  min-height: 50px;
 
   &:hover {
     transform: scale(1.2);
@@ -105,16 +106,21 @@ p {
   .image-section {
     display: none;
   }
+
+  .about-me-content {
+    max-width: 70%;
+    margin-bottom: 100px;
+  }
 }
 
 @media (max-width: 1280px) and (max-height: 800px) {
- .about-me-content{
-  z-index: 1;
- }
+  .about-me-content {
+    z-index: 1;
+  }
 }
 
 @media (max-width: 1200px) {
-  .about-me-content{
+  .about-me-content {
     > h1 {
       font-size: 70px;
     }
@@ -127,13 +133,15 @@ p {
     padding: 0 20px;
   }
 
-  .about-me-container{
+  .about-me-container {
     padding: 0 20px;
   }
-  
+
   .about-me-content {
     align-items: flex-start;
     margin-top: 100px;
+    max-width: 100%;
+    align-items: center;
     > h1 {
       font-size: 40px;
     }
@@ -146,5 +154,11 @@ p {
     > p {
       font-size: 14px;
     }
+  }
+}
+
+@media (max-width: 375px) and (max-height: 667px) {
+  .about-me-content {
+    align-items: center;
   }
 }
