--- a/src/app/mainsite/contact/contact.component.scss
+++ b/src/app/mainsite/contact/contact.component.scss
@@ -23,7 +23,7 @@
   position: relative;
 
   > h1 {
-    font-size: 90px;
+    font-size: 88px;
     font-weight: 700;
     text-align: center;
   }
@@ -94,6 +94,13 @@
     border: none;
     cursor: pointer;
     color: white;
+    display: inline-block;
+    overflow: hidden;
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+    &.active:hover {
+      background-color: #9747ff !important;
+      transform: scale(1.1);
+    }
   }
 
   > .form-error-message {
@@ -102,12 +109,6 @@
     font-weight: 200;
     width: 100%;
   }
-}
-
-.submit-button:hover {
-  background-color: #9747ff !important;
-  width: 285px;
-  height: 70px;
 }
 
 .form-input {
@@ -179,10 +180,12 @@
 .privacy-link a {
   color: #9747ff !important;
   text-decoration: none !important;
+  cursor: pointer;
 }
 
 .privacy-link a:hover {
   text-decoration: underline !important;
+  cursor: pointer !important;
 }
 
 #confirmation-message {
@@ -233,7 +236,7 @@
   .contact-details {
     margin-left: auto;
     margin-right: auto;
-    max-width: 60%;
+    max-width: 70%;
   }
 
   .contact-form {
@@ -316,6 +319,7 @@
 
   .contact-details {
     align-items: center;
+    text-align: center;
   }
 
   .contact-details-text {
