--- a/src/app/mainsite/header/header.component.scss
+++ b/src/app/mainsite/header/header.component.scss
@@ -1,22 +1,21 @@
 /* Header layout */
 .header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background: #141d2f;
-  width: 100%;
-  z-index: 10;
   position: fixed;
   top: 0;
-  padding: 37px 100px;
+  width: 100%;
+  background-color: #141d2f;
+  z-index: 999;
+  margin: 0 auto;
   box-sizing: border-box;
 }
 
 header {
-  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 37px 10px;
 }
 
 .menu {
@@ -158,6 +157,7 @@ a {
   header {
     justify-content: flex-start;
     gap: 100px;
+    padding: 0;
   }
 
   .header {
@@ -170,11 +170,16 @@ a {
     justify-content: flex-start;
     gap: 50px;
   }
+
+  .navbar{
+    white-space: nowrap;
+  }
 }
 
 @media (max-width: 975px) {
   .header {
-    padding: 37px 25px;
+    padding-left: 25px;
+    padding-right: 25px;
   }
 
   .navbar {
@@ -224,10 +229,6 @@ a {
 @media (max-width: 360px) and (max-height: 740px) {
   header {
     gap: 10px;
-  }
-
-  .header {
-    padding: 15px 150px;
   }
 
   .name-header {
