--- a/src/app/mainsite/portfolio/portfolio.component.html
+++ b/src/app/mainsite/portfolio/portfolio.component.html
@@ -4,71 +4,83 @@
       <div class="portfolio-bar left"></div>
       <h1>Portfolio</h1>
       <div class="portfolio-bar right"></div>
-    </div>
-    <div class="portfolio-text">
-      {{ "PORTFOLIO.HEADER" | translate }}
-    </div>
-   
-
-    <div class="projects">
-      <div class="project-card">
-        <img src="./assets/img/join.png" alt="Project Image" class="project-img" />
-        <div class="project-info">
-          <h2 class="project-title">Join</h2>
-          <p class="project-tech">Angular | TypeScript | HTML | CSS | Firebase</p>
-          <p class="project-description">
-            {{ "PORTFOLIO.JOIN" | translate }}
-          </p>
-          <div class="buttons">
-            <a href="https://join.miriam-fuchs.net/" target="_blank"><button class="live-btn">Live test</button></a>
-            <a href="https://github.com/FuchsMiriam/join-dummy" target="_blank"><button class="github-btn">Github</button></a>
-          </div>
-        </div>
+      <div class="portfolio-text">
+        {{ "PORTFOLIO.HEADER" | translate }}
       </div>
 
-       <div class="project-card">
-        <div class="project-info">
-          <h2 class="project-title">El Pollo Loco</h2>
-          <p class="project-tech">JavaScript | HTML | CSS</p>
-          <p class="project-description">
-            {{ "PORTFOLIO.POLLO" | translate }}
-          </p>
-          <div class="buttons">
-            <a href="https://polloloco.miriam-fuchs.net/" target="_blank"><button class="live-btn">Live test</button></a>
-            <a href="https://github.com/FuchsMiriam/polloloco" target="_blank"><button class="github-btn">Github</button></a>
+      <div class="projects">
+        <div class="project-card">
+          <img
+            src="./assets/img/join.png"
+            alt="Project Image"
+            class="project-img"
+          />
+          <div class="project-info">
+            <h2 class="project-title">Join</h2>
+            <p class="project-tech">
+              Angular | TypeScript | HTML | CSS | Firebase
+            </p>
+            <p class="project-description">
+              {{ "PORTFOLIO.JOIN" | translate }}
+            </p>
+            <div class="buttons">
+              <a href="https://join.miriam-fuchs.net/" target="_blank"
+                ><button class="live-btn">Live test</button></a
+              >
+              <a
+                href="https://github.com/FuchsMiriam/join-dummy"
+                target="_blank"
+                ><button class="github-btn">Github</button></a
+              >
+            </div>
           </div>
         </div>
-        <img src="./assets/img/pollo-loco.png" alt="Project Image" class="project-img" />
-      </div>
 
-    <div class="project-card">
-        <img src="./assets/img/crm.png" alt="Project Image" class="project-img" />
-        <div class="project-info">
-          <h2 class="project-title">Simple CRM</h2>
-          <p class="project-tech">Angular | Firebase</p>
-          <p class="project-description">
-            {{ "PORTFOLIO.CRM" | translate }}
-          </p>
-          <div class="buttons">
-            <button class="live-btn">Live test</button>
-            <button class="github-btn">Github</button>
+        <div class="project-card">
+          <div class="project-info">
+            <h2 class="project-title">El Pollo Loco</h2>
+            <p class="project-tech">JavaScript | HTML | CSS</p>
+            <p class="project-description">
+              {{ "PORTFOLIO.POLLO" | translate }}
+            </p>
+            <div class="buttons">
+              <a href="https://polloloco.miriam-fuchs.net/" target="_blank"
+                ><button class="live-btn">Live test</button></a
+              >
+              <a href="https://github.com/FuchsMiriam/polloloco" target="_blank"
+                ><button class="github-btn">Github</button></a
+              >
+            </div>
           </div>
+          <img
+            src="./assets/img/pollo-loco.png"
+            alt="Project Image"
+            class="project-img"
+          />
         </div>
-      </div>
 
-     <div class="project-card">
-        <div class="project-info">
-          <h2 class="project-title">Pokédex</h2>
-          <p class="project-tech">JavaScript | HTML | CSS | API</p>
-          <p class="project-description">
-            {{ "PORTFOLIO.POKEMON" | translate }}
-          </p>
-          <div class="buttons">
-            <a href="https://pokedex.miriam-fuchs.net/" target="_blank"><button class="live-btn">Live test</button></a>
-            <a href="https://github.com/FuchsMiriam/pokedex" target="_blank"><button class="github-btn">Github</button></a>
+        <div class="project-card">
+          <img
+            src="./assets/img/pokedex.png"
+            alt="Project Image"
+            class="project-img"
+          />
+          <div class="project-info">
+            <h2 class="project-title">Pokédex</h2>
+            <p class="project-tech">JavaScript | HTML | CSS | API</p>
+            <p class="project-description">
+              {{ "PORTFOLIO.POKEMON" | translate }}
+            </p>
+            <div class="buttons">
+              <a href="https://pokedex.miriam-fuchs.net/" target="_blank">
+                <button class="live-btn">Live test</button>
+              </a>
+              <a href="https://github.com/FuchsMiriam/pokedex" target="_blank">
+                <button class="github-btn">Github</button>
+              </a>
+            </div>
           </div>
         </div>
-        <img src="./assets/img/pokedex.png" alt="Project Image" class="project-img" />
       </div>
     </div>
   </div>
