--- a/src/app/mainsite/portfolio/portfolio.component.scss
+++ b/src/app/mainsite/portfolio/portfolio.component.scss
@@ -9,8 +9,8 @@
   background-image: url(/assets/img/shadow-portfolio.svg),
     url(/assets/img/green-shadow-portfolio.svg);
   background-repeat: no-repeat, no-repeat;
-  background-position: bottom left, center right;
-  background-size: auto;
+  background-position: bottom right, center left;
+  background-size: 600px;
   z-index: 0;
 }
 
@@ -46,7 +46,7 @@
   position: relative;
 
   > h1 {
-    font-size: 90px;
+    font-size: 88px;
     font-weight: 700;
   }
 }
@@ -305,8 +305,23 @@
   }
 }
 
-@media (max-width: 365px) and (max-height: 667px) {
-  .project-img {
-    margin-right: 50px;
+@media (max-width: 375px) and (max-height: 667px) {
+  .portfolio{
+    background-position: bottom left, center right;
+    background-size: 300px, 250px;
+  }
+
+  .project-info{
+    width: 90%;
+  }
+
+  .project-card:nth-child(odd) .project-info {
+    align-items: center;
+    text-align: center;
+  }
+  
+  .project-card:nth-child(even) .project-info {
+    align-items: center;
+    text-align: center;
   }
 }
