--- a/src/app/imprint/imprint.component.scss
+++ b/src/app/imprint/imprint.component.scss
@@ -42,3 +42,27 @@ a {
   align-items: center;
   text-align: center;
 }
+
+@media (max-width: 390px) {
+  h1 {
+    margin-top: 100px;
+  }
+}
+
+@media (max-width: 390px) and (max-height: 844px) {
+  h1 {
+    margin-top: 50px;
+  }
+}
+
+@media (max-width: 344px) and (max-height: 882px) {
+  h1 {
+    margin-top: 100px;
+  }
+}
+
+@media (max-width: 375px) and (max-height: 667px) {
+  h1 {
+    margin-top: 0;
+  }
+}
