--- a/src/app/mainsite/above-the-fold/above-the-fold.component.scss
+++ b/src/app/mainsite/above-the-fold/above-the-fold.component.scss
@@ -235,6 +235,21 @@
   }
 }
 
+@media (max-height: 823px) {
+  .hero-content-wrapper {
+    margin-top: 100px;
+  }
+
+  .center-image {
+    display: flex;
+    justify-content: center;
+  }
+
+  .hero-content-wrapper {
+    margin-bottom: 20px;
+  }
+}
+
 @media (max-width: 1024px) and (max-height: 600px) {
   .hero-section {
     padding-top: 200px;
