--- a/src/app/mainsite/comments/comments.component.scss
+++ b/src/app/mainsite/comments/comments.component.scss
@@ -153,12 +153,13 @@
   }
 
   .comments {
-    max-width: 80%;
+    max-width: 90%;
     margin-top: 50px;
   }
 
   .comment-content {
     gap: 0;
+    padding: 24px 48px;
   }
 
   .comment-text {
@@ -166,6 +167,10 @@
       font-size: 16px;
       text-align: center;
     }
+  }
+
+  .comment-author {
+    justify-content: center;
   }
 }
 
