--- a/src/app/mainsite/header/header.component.scss
+++ b/src/app/mainsite/header/header.component.scss
@@ -155,23 +155,27 @@ a {
 
 @media (max-width: 1280px) and (max-height: 800px) {
   header {
-    justify-content: flex-start;
+    justify-content: space-between;
     gap: 100px;
     padding: 0;
-  }
-
-  .header {
-    padding: 15px 150px;
+    padding-left: 25px;
+    padding-right: 25px;
   }
 }
 
 @media (max-width: 1024px) and (max-height: 600px) {
   header {
-    justify-content: flex-start;
+    justify-content: space-between;
     gap: 50px;
+    padding-left: 25px;
+    padding-right: 25px;
   }
 
-  .navbar{
+  .header {
+    padding: 0;
+  }
+
+  .navbar {
     white-space: nowrap;
   }
 }
@@ -208,6 +212,15 @@ a {
   }
 }
 
+@media (max-width: 540px) and (max-height: 720px) {
+  header {
+    gap: 180px;
+  }
+  .header {
+    padding-right: 0;
+  }
+}
+
 @media (max-width: 390px) {
   .name-header {
     flex-direction: column;
@@ -220,9 +233,18 @@ a {
   }
 }
 
-@media (max-width: 375px) and (max-height: 667px) {
-  header {
-    gap: 20px;
+@media (max-width: 360px) and (max-height: 823px) {
+  .header {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .language-switcher {
+    padding: 5px;
+  }
+
+  .name-header {
+    gap: 5px;
   }
 }
 
@@ -231,7 +253,22 @@ a {
     gap: 10px;
   }
 
+  .header {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
   .name-header {
     flex-direction: row;
+  }
+}
+
+@media (max-width: 375px) and (max-height: 667px) {
+  header {
+    gap: 20px;
+  }
+
+  .header {
+    padding-left: 0;
   }
 }
