--- a/src/app/privacy-policy/privacy-policy.component.scss
+++ b/src/app/privacy-policy/privacy-policy.component.scss
@@ -14,25 +14,25 @@ h1 {
 }
 
 h2 {
-    font-size: 1.5em;
-    color: #70e61c;
-    margin-top: 40px;
-    margin-bottom: 10px;
-  }
-  
-  h3 {
-    font-size: 1.25em;
-    color: #9747ff;
-    margin-top: 40px;
-    margin-bottom: 10px;
-  }
-  
-  h4 {
-    font-size: 1em;
-    color: #83c76f;
-    margin-top: 40px;
-    margin-bottom: 10px;
-  }
+  font-size: 1.5em;
+  color: #70e61c;
+  margin-top: 40px;
+  margin-bottom: 10px;
+}
+
+h3 {
+  font-size: 1.25em;
+  color: #9747ff;
+  margin-top: 40px;
+  margin-bottom: 10px;
+}
+
+h4 {
+  font-size: 1em;
+  color: #83c76f;
+  margin-top: 40px;
+  margin-bottom: 10px;
+}
 
 p {
   font-size: 18px;
@@ -49,5 +49,38 @@ a {
 
   &:hover {
     font-weight: bold;
+  }
+}
+
+@media (max-width: 480px) {
+  h1 {
+    font-size: 1.5em;
+  }
+
+  h2 {
+    font-size: 1.25em;
+  }
+
+  h3 {
+    font-size: 1em;
+  }
+}
+
+@media (max-width: 390px) {
+  h1 {
+    margin-top: 100px;
+  }
+}
+
+@media (max-width: 390px) and (max-height: 844px) {
+  h1 {
+    margin-top: 100px;
+  }
+}
+
+@media (max-width: 340px) {
+  h1 {
+    font-size: 22px;
+    margin-top: 100px;
   }
 }
