--- a/src/app/mainsite/header/header.component.html
+++ b/src/app/mainsite/header/header.component.html
@@ -8,8 +8,8 @@
         <p>s</p></a
       >
       <div class="language-switcher">
-        <button class="lang-btn" [ngClass]="{ active: activeLang === 'en' }" (click)="switchLanguage('en')">English</button>
-        <button class="lang-btn" [ngClass]="{ active: activeLang === 'de' }" (click)="switchLanguage('de')">Deutsch</button>
+        <button class="lang-btn" [ngClass]="{ active: translate.currentLang === 'en' }" (click)="switchLanguage('en')">English</button>
+        <button class="lang-btn" [ngClass]="{ active: translate.currentLang === 'de' }" (click)="switchLanguage('de')">Deutsch</button>
       </div>
     </div>
    
