--- a/src/app/mainsite/skills/skills.component.html
+++ b/src/app/mainsite/skills/skills.component.html
@@ -65,6 +65,7 @@
             Further <br />
             Education
           </p>
+          <span class="tooltip">Ethical Hacking</span>
         </div>
       </div>
     </div>
