--- a/src/app/mainsite/contact/contact.component.scss
+++ b/src/app/mainsite/contact/contact.component.scss
@@ -60,7 +60,6 @@
 }
 
 .contact-details-header {
-  margin-top: 40px;
   display: flex;
   align-items: center;
   gap: 32px;
@@ -238,6 +237,12 @@
   z-index: 0;
 }
 
+@media (max-width: 1400px) {
+  .contact-details-header {
+    width: 90%;
+  }
+}
+
 @media (max-width: 1250px) {
   .contact-header {
     margin-top: 0;
@@ -247,19 +252,30 @@
     }
   }
 
+  .contact-info {
+    flex-direction: column;
+    align-items: center;
+    gap: 0;
+  }
+
   .contact-details {
     margin-left: auto;
     margin-right: auto;
-    max-width: 70%;
+    max-width: 90%;
+    align-items: center;
+    left: 0;
   }
 
   .contact-details-header {
     justify-content: center;
+    text-align: center;
   }
 
   .contact-details-text {
     max-width: 100%;
-    width: 100%;
+    //width: 100%;
+    text-align: center;
+    margin-top: 0;
   }
 
   .contact-form {
@@ -272,12 +288,6 @@
 @media (max-width: 1165px) {
   .contact-header-line {
     width: 200px;
-  }
-
-  .contact-info {
-    flex-direction: column;
-    align-items: center;
-    gap: 0;
   }
 
   .contact-details {
