--- a/src/app/mainsite/skills/skills.component.scss
+++ b/src/app/mainsite/skills/skills.component.scss
@@ -26,7 +26,6 @@
   flex-direction: row;
   gap: 62px;
   flex-wrap: wrap;
-  //justify-content: center;
 }
 
 .skill-item {
@@ -38,12 +37,32 @@
   text-align: center;
   height: 100px;
   width: 88px;
-  //flex: 1 1 15%;
 
   &:hover {
     position: relative;
     top: -10px;
   }
+}
+
+.tooltip {
+  visibility: hidden;
+  background-color: #f5f5f5;
+  color: #141d2f;
+  text-align: center;
+  padding: 5px;
+  border-radius: 5px;
+  position: absolute;
+  bottom: 120%;
+  left: 50%;
+  transform: translateX(-50%);
+  white-space: nowrap;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.skill-item:hover .tooltip {
+  visibility: visible;
+  opacity: 1;
 }
 
 /* Details */
