--- a/src/app/mainsite/above-the-fold/above-the-fold.component.scss
+++ b/src/app/mainsite/above-the-fold/above-the-fold.component.scss
@@ -249,6 +249,30 @@
   transform: rotate(90deg) scale(1.2);
 }
 
+@media (min-width: 1800px) {
+  .hero-bg {
+    height: 1150px;
+  }
+}
+
+@media (min-width: 2080px) {
+  .hero-bg {
+    height: 1200px;
+  }
+}
+
+@media (min-width: 2450px) {
+  .hero-bg {
+    height: 1250px;
+  }
+}
+
+@media (min-width: 2700px) {
+  .hero-bg {
+    height: 1300px;
+  }
+}
+
 @media (max-width: 1400px) {
   .background-image-photo {
     position: absolute;
@@ -362,14 +386,12 @@
     }
   }
 
-  .hero-bg {
-    top: -150px;
-  }
-}
-
-@media (max-width: 470px) {
   .background-image-photo {
     width: 400px;
+  }
+
+  .hero-bg {
+    top: -150px;
   }
 }
 
