--- a/src/app/mainsite/header/header.component.scss
+++ b/src/app/mainsite/header/header.component.scss
@@ -68,7 +68,7 @@ a {
   top: 0;
   position: fixed;
   left: 100%;
-  background-color: rgba(0, 0, 0, 0.85);
+  background-color: rgba(0, 0, 0, 0.8);
   z-index: 1000;
   display: flex;
   justify-content: center;
@@ -99,8 +99,8 @@ a {
 
 .close-overlay {
   position: absolute;
-  top: 50px;
-  right: 35px;
+  top: 48px;
+  right: 33px;
   width: 30px;
   height: 30px;
   cursor: pointer;
@@ -223,6 +223,11 @@ a {
       font-size: 12px;
     }
   }
+
+  .close-overlay {
+    top: 45px;
+    right: 32px;
+  }
 }
 
 @media (max-width: 540px) and (max-height: 720px) {
@@ -232,17 +237,30 @@ a {
   .header {
     padding-right: 0;
   }
+
+  .close-overlay {
+    top: 6px;
+    right: 7px;
+  }
 }
 
 @media (max-width: 390px) {
   .name-header {
     flex-direction: column;
   }
+
+  .close-overlay {
+    top: 65px;
+  }
 }
 
 @media (max-width: 390px) and (max-height: 844px) {
   .name-header {
     flex-direction: row;
+  }
+
+  .close-overlay {
+    top: 45px;
   }
 }
 
@@ -274,6 +292,11 @@ a {
   .name-header {
     flex-direction: row;
   }
+
+  .close-overlay {
+    top: 12px;
+    right: 22px;
+  }
 }
 
 @media (max-width: 375px) and (max-height: 667px) {
@@ -283,5 +306,10 @@ a {
 
   .header {
     padding-left: 0;
+  }
+
+  .close-overlay {
+    right: 22px;
+    top: 7px;
   }
 }
