--- a/src/app/mainsite/above-the-fold/above-the-fold.component.html
+++ b/src/app/mainsite/above-the-fold/above-the-fold.component.html
@@ -1,10 +1,6 @@
 <section class="hero-section">
+  <img class="hero-bg" src="./assets/img/background_abovethefold.svg" alt="" />
   <div class="hero-content-wrapper">
-    <img
-      class="hero-bg"
-      src="./assets/img/background_abovethefold.svg"
-      alt=""
-    />
     <div class="image-wrapper">
       <img
         class="background-image-photo"
@@ -15,7 +11,7 @@
         <img src="./assets/img/miriam_fuchs_downsized.png" alt="Miriam Fuchs" />
       </div>
     </div>
- 
+
     <div class="hero-content">
       <div class="introduction-container">
         <div class="introduction-text">
