--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -10,12 +10,14 @@
   top: 0;
   background-color: #141d2f;
   z-index: 10;
-  padding: 0 10px;
+  padding: 0;
 }
 
 .footer-content {
   width: 1440px;
   margin: 0 auto;
+  padding-left: 25px;
+  padding-right: 25px;
 }
 
 .line {
