--- a/src/app/mainsite/portfolio/portfolio.component.scss
+++ b/src/app/mainsite/portfolio/portfolio.component.scss
@@ -236,9 +236,9 @@
     margin-left: auto;
   }
 
-  .project-info {
+  /*.project-info {
     width: 40%;
-  }
+  }*/
 
   .project-description {
     width: 90%;
