--- a/src/app/mainsite/header/header.component.scss
+++ b/src/app/mainsite/header/header.component.scss
@@ -4,7 +4,7 @@
   top: 0;
   width: 100%;
   background-color: #141d2f;
-  z-index: 999;
+  z-index: 99;
   margin: 0 auto;
   box-sizing: border-box;
 }
@@ -210,6 +210,24 @@ a {
   }
 }
 
+@media (max-width: 912px) and (max-height: 1368px) {
+  .close-overlay {
+    top: 20px;
+  }
+}
+
+@media (max-width: 820px) and (max-height: 1180px) {
+  .close-overlay {
+    top: 20px;
+  }
+}
+
+@media (max-width: 768px) and (max-height: 1024px) {
+  .close-overlay {
+    top: 20px;
+  }
+}
+
 @media (max-width: 550px) {
   .name-header {
     gap: 16px;
@@ -236,8 +254,21 @@ a {
   }
 
   .close-overlay {
-    top: 6px;
-    right: 7px;
+    top: 15px;
+    right: 22px;
+  }
+}
+
+@media (max-width: 440px) and (max-height: 932px) {
+  .close-overlay {
+    top: 18px;
+  }
+}
+
+@media (max-width: 414px) and (max-height: 896px) {
+  .close-overlay {
+    top: 15px;
+    right: 32px;
   }
 }
 
@@ -257,7 +288,7 @@ a {
   }
 
   .close-overlay {
-    top: 45px;
+    top: 15px;
   }
 }
 
@@ -276,6 +307,12 @@ a {
   }
 }
 
+@media (max-width: 344px) and (max-height: 882px){
+  .close-overlay{
+    top: 37px;
+  }
+}
+
 @media (max-width: 360px) and (max-height: 740px) {
   header {
     gap: 10px;
@@ -291,7 +328,7 @@ a {
   }
 
   .close-overlay {
-    top: 12px;
+    top: 20px;
     right: 22px;
   }
 }
