--- a/src/app/mainsite/aboutme/aboutme.component.scss
+++ b/src/app/mainsite/aboutme/aboutme.component.scss
@@ -126,6 +126,15 @@ p {
   }
 }
 
+@media (max-width: 765px) {
+  .about-me-content {
+    > h1 {
+      font-size: 40px;
+      margin-top: 0;
+    }
+  }
+}
+
 @media (max-width: 700px) {
   .about-me {
     justify-content: flex-start;
@@ -141,10 +150,6 @@ p {
     align-items: flex-start;
     max-width: 100%;
     align-items: center;
-    > h1 {
-      font-size: 40px;
-      margin-top: 0;
-    }
     > p {
       font-size: 14px;
     }
