--- a/src/app/mainsite/comments/comments.component.scss
+++ b/src/app/mainsite/comments/comments.component.scss
@@ -190,6 +190,12 @@
   }
 }
 
+@media (max-width: 765px) {
+  .comments-section {
+    margin-bottom: 0;
+  }
+}
+
 @media (max-width: 540px) and (max-height: 720px) {
   .comments-section {
     margin-left: auto;
@@ -200,6 +206,9 @@
 @media (max-width: 500px) {
   .comment-content {
     padding: 24px 40px;
+  }
+  .comments-section {
+    margin-bottom: 0;
   }
 }
 
