--- a/src/app/mainsite/skills/skills.component.html
+++ b/src/app/mainsite/skills/skills.component.html
@@ -65,7 +65,7 @@
             Further <br />
             Education
           </p>
-          <span class="tooltip">Ethical Hacking</span>
+          <span class="tooltip">Ethical Hacking<br>C++</span>
         </div>
       </div>
     </div>
