--- a/src/app/mainsite/above-the-fold/above-the-fold.component.scss
+++ b/src/app/mainsite/above-the-fold/above-the-fold.component.scss
@@ -352,6 +352,7 @@
   .name-title {
     > h1 {
       font-size: 80px;
+      padding-top: 16px;
     }
   }
 }
@@ -396,6 +397,12 @@
   }
 }
 
+@media (max-width: 625px) and (max-height:824px) {
+  .hero-section{
+    padding-top: 0;
+  }
+}
+
 @media (max-width: 625px) {
   .contact-button-container {
     height: auto;
@@ -408,7 +415,6 @@
 
 @media (max-width: 540px) and (max-height: 720px) {
   .hero-bg {
-    //top: 210px;
     top: 26%;
   }
 
@@ -430,14 +436,12 @@
   }
 
   .hero-bg {
-    //top: 30px;
     top: 3%;
   }
 }
 
 @media (max-width: 415px) {
   .hero-bg {
-    //top: -8px;
     top: -1%;
   }
 
@@ -468,7 +472,6 @@
 
 @media (max-width: 390px) and (max-height: 844px) {
   .hero-bg {
-    //top: -15px;
     top: -2%;
   }
 }
@@ -485,7 +488,6 @@
   }
 
   .hero-bg {
-    //top: 70px;
     top: 5%;
   }
 
