--- a/src/app/mainsite/portfolio/portfolio.component.scss
+++ b/src/app/mainsite/portfolio/portfolio.component.scss
@@ -250,6 +250,10 @@
   .portfolio-bar.right {
     max-width: 200px;
   }
+
+  .portfolio-content {
+    margin-top: 50px;
+  }
 }
 
 @media (max-width: 765px) {
@@ -260,7 +264,7 @@
   }
 
   .portfolio-content {
-    margin-top: 0;
+    margin-top: 20px;
   }
 
   .portfolio-header {
@@ -305,6 +309,30 @@
   }
 }
 
+@media (max-width: 540px) and (max-height: 720px) {
+  .portfolio-content {
+    margin-top: 20px;
+  }
+}
+
+@media (max-width: 430px) and (max-height: 932px) {
+  .portfolio-content {
+    margin-top: 20px;
+  }
+}
+
+@media (max-width: 414px) and (max-height: 896px) {
+  .portfolio-content {
+    margin-top: 20px;
+  }
+}
+
+@media (max-width:390px){
+  .portfolio-content{
+    margin-top: 50px;
+  }
+}
+
 @media (max-width: 375px) and (max-height: 667px) {
   .portfolio {
     background-position: bottom left, center right;
@@ -323,5 +351,15 @@
   .project-card:nth-child(even) .project-info {
     align-items: center;
     text-align: center;
+  }
+
+  .portfolio-content {
+    margin-top: 10px;
+  }
+}
+
+@media (max-width: 344px) and (max-height: 882px) {
+  .portfolio-content {
+    margin-top: 55px;
   }
 }
