--- a/src/app/mainsite/skills/skills.component.scss
+++ b/src/app/mainsite/skills/skills.component.scss
@@ -154,6 +154,7 @@
 
   .skills-details {
     width: 70%;
+    top: -60px;
   }
 
   .skills-header {
@@ -173,7 +174,17 @@
   }
 }
 
+@media (max-width: 912px) {
+  .skills-wrapper {
+    margin-top: 50px;
+  }
+}
+
 @media (max-width: 765px) {
+.skills-wrapper{
+  margin-top: 90px;
+}
+
   .skills-header {
     height: 100px;
     > h2 {
@@ -205,6 +216,12 @@
   }
 }
 
+@media (max-width: 540px) and (max-height: 720px) {
+  .skills-wrapper {
+    margin-top: 80px;
+  }
+}
+
 @media (max-width: 460px) {
   .skills-details {
     width: 250px;
@@ -230,5 +247,17 @@
   .additional-skills {
     gap: 20px;
     width: 250px;
+  }
+}
+
+@media (max-width: 375px) and (max-height: 667px) {
+  .skills-wrapper {
+    margin-top: 50px;
+  }
+}
+
+@media (max-width: 344px) and (max-height: 882px) {
+  .skills-wrapper {
+    margin-top: 70px;
   }
 }
