added cms to skills

--- a/src/app/mainsite/skills/skills.component.html
+++ b/src/app/mainsite/skills/skills.component.html
@@ -62,6 +62,18 @@
             alt=""
           />
           <p>
+            CMS
+          </p>
+          <span class="tooltip">Wordpress<br>TYPO3</span>
+        </div>
+
+        <div class="skill-item">
+          <img
+            class="learning-img"
+            src="./assets/img/learning_downsized.png"
+            alt=""
+          />
+          <p>
             Further <br />
             Education
           </p>
