--- a/src/app/mainsite/skills/skills.component.html
+++ b/src/app/mainsite/skills/skills.component.html
@@ -58,7 +58,7 @@
         <div class="skill-item">
           <img
             class="learning-img"
-            src="./assets/img/learning_downsized.png"
+            src="./assets/img/cms.svg"
             alt=""
           />
           <p>
