--- a/src/app/mainsite/portfolio/portfolio.component.html
+++ b/src/app/mainsite/portfolio/portfolio.component.html
@@ -81,6 +81,26 @@
             </div>
           </div>
         </div>
+
+        <div class="project-card">
+          <div class="project-info">
+            <h2 class="project-title"> {{ "PORTFOLIO.TYPO3-TITLE" | translate }}</h2>
+            <p class="project-tech">TYPO3 | HTML | CSS</p>
+            <p class="project-description">
+              {{ "PORTFOLIO.TYPO3" | translate }}
+            </p>
+            <div class="buttons">
+              <a href="https://www.gruene-taunusstein.de/aktuelles" target="_blank"
+                ><button class="live-btn">Live test</button></a
+              >
+            </div>
+          </div>
+          <img
+            src="./assets/img/webseite.svg"
+            alt="Project Image"
+            class="project-img"
+          />
+        </div>
       </div>
     </div>
   </div>
